Mon Aug 31 12:45:49 1998  Richard Henderson  <rth@cygnus.com>

	* gas/vtable/vtable.exp: New.
	* gas/vtable/{entry0.s,entry0.d}: New.
	* gas/vtable/{entry1.s,entry1.d}: New.
	* gas/vtable/{inherit0.s,inherit0.d}: New.
	* gas/vtable/{inherit1.s,inherit1.l}: New.

Thu Aug 20 23:18:06 1998  Ian Lance Taylor  <ian@cygnus.com>

	* gas/i386/white.l: Revert patch of August 12.

Wed Aug 12 11:54:37 1998  Jeffrey A Law  (law@cygnus.com)

	* gas/mn10300/udf.s: New test.
	* gas/mn10300/basic.exp: Run it.

Wed Aug 12 13:25:38 1998  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/general.l: Test andb $~0x80,foo.
	* gas/i386/general.s: Update.

	* gas/i386/white.l: Expect warning for stand-alone ss prefix.

start-sanitize-m32rx
Tue Jul 28 10:11:22 1998  Doug Evans  <devans@canuck.cygnus.com>

	* gas/m32r/m32rx.s: Test new insns.
	* gas/m32r/m32rx.d: Ditto.

end-sanitize-m32rx
start-sanitize-am33
Thu Jul 23 09:22:09 1998  Jeffrey A Law  (law@cygnus.com)

	* gas/mn10300/am33_8.s: Test DSP autoincrement memory loads/stores.
	* gas/mn10300/basic.exp: Corresponding changes.

	* gas/mn10300/am_*.s: Test autoincrement memory loads/stores.
	* gas/mn10300/basic.exp: Corresponding changes.

end-sanitize-am33
Tue Jul 21 12:46:59 1998  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/white.s: Add some more whitespace tests.
	* gas/i386/white.l: Update accordingly.

start-sanitize-am33
Thu Jul 16 18:16:49 1998  Jeffrey A Law  (law@cygnus.com)

	* gas/mn10300/am33_5.s: Test 4 operand mul, mulu.
	* gas/mn10300/basic.exp: Corresponding changes.

end-sanitize-am33
Mon Jul 13 18:15:11 1998  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/*: All new i386 testsuite.

1998-07-02  Ken Raeburn  <raeburn@cygnus.com>

	* lib/gas-defs.exp (gas_init): Complain if target name isn't in
	canonical form.

Wed Jul  1 15:35:09 1998  Nick Clifton  <nickc@cygnus.com>

	* gas/all/gas.exp: Expect ARM and Thumb cofftag test to fail.
