@@ -4,7 +4,7 @@
 .*: +file format .*
 
 RELOCATION RECORDS FOR \[.text\]:
-OFFSET   TYPE              VALUE 
+OFFSET +TYPE +VALUE 
 0+0000010 R_.*_GNU_VTENTRY  vtbl_a
 
 
