@@ -4,7 +4,7 @@
 .*: +file format .*
 
 RELOCATION RECORDS FOR \[.data\]:
-OFFSET   TYPE              VALUE 
+OFFSET +TYPE +VALUE 
 0+0000000 R_.*_GNU_VTINHERIT  \*ABS\*
 0+0000010 R_.*_GNU_VTINHERIT  vtbl_a
 
